--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>com.github.jasmine</groupId>
+                  <groupId>com.github.jsimone</groupId>
                   <artifactId>webapp-runner</artifactId>
                   <version>8.5.11.3</version>
                   <destFileName>webapp-runner.jar</destFileName>
